<resources>
    <string name="app_name">Lavacar</string>
    <string name="menu_title">Lavacar Sistema</string>
    <string name="menu_customers">Clientes</string>
    <string name="menu_employees">Empleados</string>
    <string name="menu_cars">Carros</string>
    <string name="menu_services">Servicios</string>
    <string name="menu_invoice">Factura</string>
    <string name="menus_customers">Clientes</string>
    <string name="menus_employees">Empleados</string>
    <string name="menus_cars">Carros</string>
    <string name="menus_services">Servicios</string>
    <string name="menus_invoice">Factura</string>
    <string name="serch_barra">Buscar</string>
    <string name="titulo_carros">Carros</string>
    <string name="hint_buscar_placa">Buscar por placa</string>
    <string name="cd_buscar">Buscar</string>
    <string name="cd_agregar">Agregar</string>
    <string name="cd_editar">Editar</string>
    <string name="cd_eliminar">Eliminar</string>
    <string name="cd_salir">Salir</string>
    <string name="hint_placa">Placa</string>
    <string name="hint_modelo">Modelo</string>
    <string name="hint_anio">Año</string>
    <string name="hint_cedula_cliente">Cédula Cliente</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_regresar">Regresar</string>
    <string name="hint_cedula_clientee">Cédula</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_puesto">Puesto</string>
    <string name="hint_nombre_servicio">Nombre del servicio</string>
    <string name="hint_precio_servicio">Precio</string>
    <string name="titulo_facturas">Facturas</string>
    <string name="hint_buscar_factura">Buscar por idFactura</string>
    <string name="titulo_nueva_factura">Nueva Factura</string>
    <string name="hint_cedula_cliente_maestro">Cédula Cliente</string>
    <string name="hint_cedula_empleado_maestro">Cédula Empleado</string>
    <string name="hint_placa_carro_maestro">Placa del carro</string>
    <string name="info_nombre_cliente">Nombre cliente</string>
    <string name="info_nombre_empleado">Nombre empleado</string>
    <string name="info_carro">Info carro</string>
    <string name="titulo_detalle_servicios">Detalle de servicios</string>
    <string name="hint_codigo_servicio">Código servicio</string>
    <string name="info_nombre_servicio">Nombre servicio</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="info_subtotal">Subtotal: 0</string>
    <string name="btn_guardar_factura">Guardar Factura</string>
    <string name="btn_tomarfoto">Tomar Foto</string>
</resources>
