<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- Campo Cédula -->
    <EditText
        android:id="@+id/txtCedulaCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cedula_clientee"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo Nombre -->
    <EditText
        android:id="@+id/txtNombreCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/txtCedulaCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo Apellidos -->
    <EditText
        android:id="@+id/txtApellidosCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apellidos"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/txtNombreCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo Teléfono -->
    <EditText
        android:id="@+id/txtTelefonoCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telefono"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/txtApellidosCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo Correo -->
    <EditText
        android:id="@+id/txtCorreoCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/txtTelefonoCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnGuardarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:onClick="GuardarCliente"
        android:text="@string/btn_guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoCliente" />

    <Button
        android:id="@+id/btnRegresarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:onClick="RegresarListCliente"
        android:text="@string/btn_regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoCliente" />

</androidx.constraintlayout.widget.ConstraintLayout>

