<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitleFacturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/titulo_facturas"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtBuscarFactura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_buscar_factura"
            android:padding="10dp"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/btnBuscarFactura"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_buscar"
            android:onClick="Buscar"
            android:src="@drawable/ic_buscar" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewFacturas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/btnAgregarFactura"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_agregar"
            android:onClick="Insertar"
            android:src="@drawable/ic_agregar" />

        <ImageButton
            android:id="@+id/btnEliminarFactura"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_eliminar"
            android:onClick="Eliminar"
            android:src="@drawable/ic_eliminar" />

        <ImageButton
            android:id="@+id/btnSalirFactura"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_salir"
            android:onClick="regresar"
            android:src="@drawable/ic_regresar" />
        <ImageButton
            android:id="@+id/btnMostrarDetalle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="Mostrar Detalle"
            android:onClick="MostrarDetalleFactura"
            android:src="@drawable/ic_factura" />

    </LinearLayout>

</LinearLayout>
