<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitleFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_nueva_factura"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCedulaCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cedula_cliente_maestro"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvTitleFactura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarCliente"
        app:layout_constraintHorizontal_bias="0" />

    <ImageButton
        android:id="@+id/btnBuscarCliente"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_buscar"
        android:background="@android:color/transparent"
        android:onClick="BuscarCliente"
        app:layout_constraintStart_toEndOf="@id/txtCedulaCliente"
        app:layout_constraintTop_toTopOf="@id/txtCedulaCliente"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNombreCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_nombre_cliente"
        android:paddingTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtCedulaCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtCedulaEmpleado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cedula_empleado_maestro"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvNombreCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarEmpleado" />

    <ImageButton
        android:id="@+id/btnBuscarEmpleado"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_buscar"
        android:background="@android:color/transparent"
        android:onClick="BuscarEmpleado"
        app:layout_constraintStart_toEndOf="@id/txtCedulaEmpleado"
        app:layout_constraintTop_toTopOf="@id/txtCedulaEmpleado"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNombreEmpleado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_nombre_empleado"
        android:paddingTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtCedulaEmpleado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtPlacaCarro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_placa_carro_maestro"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvNombreEmpleado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarCarro" />

    <ImageButton
        android:id="@+id/btnBuscarCarro"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_buscar"
        android:background="@android:color/transparent"
        android:onClick="BuscarCarro"
        app:layout_constraintStart_toEndOf="@id/txtPlacaCarro"
        app:layout_constraintTop_toTopOf="@id/txtPlacaCarro"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvInfoCarro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_carro"
        android:paddingTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtPlacaCarro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/tvInfoCarro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvDetalleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_detalle_servicios"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/txtIdServicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_codigo_servicio"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tvDetalleTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarServicio" />

    <ImageButton
        android:id="@+id/btnBuscarServicio"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_buscar"
        android:background="@android:color/transparent"
        android:onClick="BuscarServicio"
        app:layout_constraintStart_toEndOf="@id/txtIdServicio"
        app:layout_constraintTop_toTopOf="@id/txtIdServicio"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNombreServicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_nombre_servicio"
        app:layout_constraintTop_toBottomOf="@id/txtIdServicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cantidad"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tvNombreServicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtPrecio" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_precio_servicio"
        android:inputType="numberDecimal"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvNombreServicio"
        app:layout_constraintStart_toEndOf="@id/txtCantidad"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubtotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_subtotal"
        app:layout_constraintTop_toBottomOf="@id/txtCantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/llBtnsDetalle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSubtotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:paddingTop="8dp">

        <ImageButton
            android:id="@+id/btnAgregarDetalle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/ic_agregar"
            android:background="@android:color/transparent"
            android:onClick="AgregarDetalle" />

        <ImageButton
            android:id="@+id/btnEditarDetalle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/ic_editar"
            android:background="@android:color/transparent"
            android:onClick="EditarDetalle" />

        <ImageButton
            android:id="@+id/btnEliminarDetalle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/ic_eliminar"
            android:background="@android:color/transparent"
            android:onClick="EliminarDetalle" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewDetalles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="8dp"
        app:layout_constraintTop_toBottomOf="@id/llBtnsDetalle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llGuardarSalir"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:id="@+id/llGuardarSalir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btnGuardarFactura"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="@string/btn_guardar_factura"
            android:onClick="GuardarFactura" />

        <Button
            android:id="@+id/btnSalirFactura"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="@string/cd_salir"
            android:onClick="Salir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
